[package]
name = "hdn"
description = "Utility for updating home.nix"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["nix"]
categories = ["command-line-utilities"]
repository = "https://github.com/seasonedfish/hdn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.7"
dirs = "5.0.0"
indexmap = "1.9.3"
nix-editor = "0.3.0"
owo-colors = "3.5.0"
similar = { version = "2.2.1", features = ["inline"] }
thiserror = "1.0.40"
