[package]
name = "hdn"
description = "Utility for updating home.nix"
version = "1.0.0"
edition = "2021"
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["nix"]
categories = ["command-line-utilities"]
repository = "https://github.com/seasonedfish/hdn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
indexmap = "1.9.3"
owo-colors = "3.5.0"
rnix = "0.11.0"
similar = { version = "2.2.1", features = ["inline"] }
thiserror = "1.0.40"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
